[gd_scene load_steps=17 format=2]

[ext_resource path="res://Images/Promo/BunHD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/GlitchEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/CloseableWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Smood.tres" type="Material" id=4]
[ext_resource path="res://Images/bunos.png" type="Texture" id=5]
[ext_resource path="res://Objects/Interactable.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Scrollbar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/static.ogg" type="AudioStream" id=8]
[ext_resource path="res://Objects/Pictures.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/BuyButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objects/DecorativeAd.tscn" type="PackedScene" id=11]
[ext_resource path="res://Images/Promo/PromoScene.gd" type="Script" id=12]
[ext_resource path="res://Images/Ads/link.png" type="Texture" id=13]
[ext_resource path="res://Sounds/startup.ogg" type="AudioStream" id=14]
[ext_resource path="res://Sounds/hard drive.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Glitch"
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.266667, 0.366667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -25.0, -80.0 ]
}

[node name="PromoScene" type="Node2D"]
script = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
color = Color( 0.866667, 0.917647, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bunos" type="Sprite" parent="."]
material = ExtResource( 4 )
position = Vector2( 236, 508 )
scale = Vector2( 1.60526, 1.60526 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( -8.71249, 178.83, 211.185, 133.57 )

[node name="ColorRect" type="ColorRect" parent="bunos"]
margin_left = 8.0
margin_top = -93.0
margin_right = 126.0
margin_bottom = -10.0
color = Color( 0.866667, 0.917647, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bunos2" type="Sprite" parent="."]
self_modulate = Color( 0.980392, 0.611765, 0.611765, 1 )
material = ExtResource( 4 )
position = Vector2( 776.735, 524.618 )
scale = Vector2( 1.30988, 1.30988 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 344.994, 180.662, 232.104, 138.796 )

[node name="ColorRect" type="ColorRect" parent="bunos2"]
margin_left = -149.0
margin_top = -80.0
margin_right = -75.0
margin_bottom = -26.0
rect_rotation = -35.7
color = Color( 0.866667, 0.917647, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bun" parent="." instance=ExtResource( 1 )]
position = Vector2( 511, -84 )
scale = Vector2( 2, 2 )
constant_scale = 1.5

[node name="CloseableWindow" parent="." instance=ExtResource( 3 )]
position = Vector2( 511, 1024 )
scale = Vector2( 2, 2 )

[node name="Interactable" parent="." instance=ExtResource( 6 )]
position = Vector2( 506, 644 )

[node name="Pictures" parent="." instance=ExtResource( 9 )]
modulate = Color( 1, 1, 1, 0.435294 )
margin_left = -228.0
margin_top = -28.0
margin_right = 377.0
margin_bottom = 121.0

[node name="Scrollbar" parent="Pictures" instance=ExtResource( 7 )]
position = Vector2( 586, 168 )
rotation = -3.14159
width = 600

[node name="window minimizable2" parent="Pictures" instance=ExtResource( 11 )]
show_behind_parent = true
position = Vector2( 310, 234 )

[node name="BuyButton" parent="." instance=ExtResource( 10 )]
modulate = Color( 1, 1, 1, 0.196078 )
position = Vector2( 825, 294 )

[node name="window minimizable" parent="." instance=ExtResource( 11 )]
position = Vector2( 873, 55 )

[node name="link in bio" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 1024.0
color = Color( 0.866667, 0.917647, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="link in bio"]
margin_left = 263.0
margin_top = 485.0
margin_right = 577.0
margin_bottom = 552.0
rect_scale = Vector2( 1.5, 1.5 )
text = "link in bio."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="link in bio"]
modulate = Color( 0.227451, 0.184314, 1, 1 )
margin_left = 320.0
margin_top = 441.0
margin_right = 547.0
margin_bottom = 473.0
rect_scale = Vector2( 1.5, 1.5 )
text = "fuzzyzilla.itch.io"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="link in bio/Label2"]
position = Vector2( 238.667, 13.3333 )
scale = Vector2( 0.322115, 0.322115 )
texture = ExtResource( 13 )

[node name="GlitchEffect" parent="." instance=ExtResource( 2 )]
amount = 0.05

[node name="Timer" type="Timer" parent="."]
wait_time = 0.728
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -80.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioStreamPlayer"]
anims/Glitch = SubResource( 1 )

[node name="Chime" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Timer" type="Timer" parent="Chime"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Harddrive" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
autoplay = true

[connection signal="interacted" from="Interactable" to="." method="_on_Interactable_interacted"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Chime/Timer" to="Chime" method="play" flags=6]
